Bug 324295 - Maintain setting for "show only matches" option
Summary: Maintain setting for "show only matches" option
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-30 21:34 UTC by hvm
Modified: 2014-05-21 10:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hvm 2013-08-30 21:34:34 UTC
The option to only show matches on playlist search is reset at each amarok startup. I think it should be saved (if you close amarok with the option on it stays on and if off it stays off).

Reproducible: Always
Comment 1 hvm 2013-08-31 07:30:21 UTC
OK, so the option does get saved but not everytime. AFAICT when I quit amarok manually it gets saved, when I just shutdown the PC it doesn't get saved.

So... maybe it's a distribution problem (i.e. depends on the way shutdown is handled) - I'm using Kubuntu 13.04
Comment 2 Myriam Schweingruber 2013-08-31 08:28:03 UTC
And which exact Amarok version do you use? This might well be solved in 2.8 already
Comment 3 hvm 2013-08-31 08:35:40 UTC
It's Amarok 2.7 but like I said, I just started amarok and the setting was saved. I don't know exactly why it dind't earlier but if it happens again I will come back with details.
Comment 4 Myriam Schweingruber 2013-08-31 18:45:13 UTC
You should upgrade, there have been improvements on the session saving in 2.8
Comment 5 Mark Kretschmann 2013-09-01 08:19:48 UTC
Can you point me to the relevant commits or discussion please? I haven't heard of any such changes.
Comment 6 Mark Kretschmann 2013-09-02 09:46:27 UTC
Git commit 744b516c9c47643ab6fb2592371c0016b3fae629 by Mark Kretschmann.
Committed on 02/09/2013 at 09:45.
Pushed by markey into branch 'master'.

Sync playlist search option right after setting.

M  +3    -1    src/playlist/ProgressiveSearchWidget.cpp

http://commits.kde.org/amarok/744b516c9c47643ab6fb2592371c0016b3fae629
Comment 7 Mark Kretschmann 2013-09-02 09:50:08 UTC
Git commit cbae195a5e784833644cf73290f93ad44cc3adcd by Mark Kretschmann.
Committed on 02/09/2013 at 09:48.
Pushed by markey into branch 'master'.

Revert "Sync playlist search option right after setting."

This reverts commit 744b516c9c47643ab6fb2592371c0016b3fae629.

The patch was complete nonsense, sorry.

M  +1    -3    src/playlist/ProgressiveSearchWidget.cpp

http://commits.kde.org/amarok/cbae195a5e784833644cf73290f93ad44cc3adcd
Comment 8 Mark Kretschmann 2013-09-02 10:56:23 UTC
Git commit e44eedd6c42526d4e4cdc14d1bdf18e6660a46ac by Mark Kretschmann.
Committed on 02/09/2013 at 10:55.
Pushed by markey into branch 'master'.

Sync playlist search config instantly.

M  +5    -6    src/playlist/ProgressiveSearchWidget.cpp
M  +0    -5    src/playlist/ProgressiveSearchWidget.h

http://commits.kde.org/amarok/e44eedd6c42526d4e4cdc14d1bdf18e6660a46ac
Comment 9 vedant agarwala 2014-05-21 10:41:38 UTC
Git commit fcf3dbb95158951045b35f4534cfccf3a0e91506 by Vedant Agarwala, on behalf of Mark Kretschmann.
Committed on 02/09/2013 at 09:45.
Pushed by vedanta into branch 'tagguessing'.

Sync playlist search option right after setting.

M  +3    -1    src/playlist/ProgressiveSearchWidget.cpp

http://commits.kde.org/amarok/fcf3dbb95158951045b35f4534cfccf3a0e91506
Comment 10 vedant agarwala 2014-05-21 10:45:21 UTC
Git commit 43f66b35d4e389044970565deacef13fa6470842 by Vedant Agarwala, on behalf of Mark Kretschmann.
Committed on 02/09/2013 at 10:55.
Pushed by vedanta into branch 'tagguessing'.

Sync playlist search config instantly.

M  +5    -6    src/playlist/ProgressiveSearchWidget.cpp
M  +0    -5    src/playlist/ProgressiveSearchWidget.h

http://commits.kde.org/amarok/43f66b35d4e389044970565deacef13fa6470842
Comment 11 vedant agarwala 2014-05-21 10:46:23 UTC
Git commit c8df38f04f9d73ab9ebe4a3a51d8e29edf1d467a by Vedant Agarwala, on behalf of Mark Kretschmann.
Committed on 02/09/2013 at 09:48.
Pushed by vedanta into branch 'tagguessing'.

Revert "Sync playlist search option right after setting."

This reverts commit 744b516c9c47643ab6fb2592371c0016b3fae629.

The patch was complete nonsense, sorry.

M  +1    -3    src/playlist/ProgressiveSearchWidget.cpp

http://commits.kde.org/amarok/c8df38f04f9d73ab9ebe4a3a51d8e29edf1d467a