Sync playlist search option right after setting.

BUG: 324295